force-app/main/default/objects/Case/fields/Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Email__c</fullName>
    <description>This field is used to store the case Assigned To user Email</description>
    <label>Assigned To Email</label>
    <type>Email</type>
</CustomField>