force-app/main/default/objects/Case/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <description>This field is used to store the assigned to name</description>
    <label>Assigned To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>