force-app/main/default/objects/Case/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Field created for the YODA Program</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Bench Repair</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>Eng Tech</fullName>
            </value>
            <value>
                <fullName>Mainte</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Other Chargeable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Site Support</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Value Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>