force-app/main/default/objects/Case/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <description>Dependent on Status</description>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solved by customer</fullName>
            </value>
            <value>
                <fullName>Administrative Closure</fullName>
            </value>
            <value>
                <fullName>Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Answer Provided</fullName>
            </value>
            <value>
                <fullName>Sales to Follow Up</fullName>
            </value>
            <value>
                <fullName>Case Canceled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Merged</fullName>
                <isActive>false</isActive>
                <label>Merged</label>
            </value>
            <value>
                <fullName>Opportunity Identified</fullName>
                <isActive>false</isActive>
                <label>Opportunity Identified</label>
            </value>
            <value>
                <fullName>Passed to Sales</fullName>
                <isActive>false</isActive>
                <label>Passed to Sales</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>