force-app/main/default/objects/Case/fields/Contact_is_Missing_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Contact_is_Missing_on_Case__c</fullName>
    <formula>IF(ISBLANK(ContactId), 
IMAGE(&quot;/resource/1631124161000/yoda_addcontactred&quot;, &quot;&quot;,31,31), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact is Missing on Case</label>
    <type>Text</type>
</CustomField>