force-app/main/default/objects/Case/fields/ContractMainteCrmID__c.field-meta.xml
<CustomField>
    <fullName>ContractMainteCrmID__c</fullName>
    <label>ContractMainteCrmID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>