force-app/main/default/objects/Case/fields/Date_of_Information_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Information_Received__c</fullName>
    <label>Date of Information Received</label>
    <type>Date</type>
</CustomField>