force-app/main/default/objects/Case/fields/Deliverables_ID__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_ID__c</fullName>
    <label>Deliverables ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>