force-app/main/default/objects/Case/fields/DOA__c.field-meta.xml
<CustomField>
    <fullName>DOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOA</label>
    <type>Checkbox</type>
</CustomField>