force-app/main/default/objects/Case/fields/Escalation_Details__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Details__c</fullName>
    <label>Escalation Details</label>
    <type>TextArea</type>
</CustomField>