force-app/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <description>Picklist to further describe why a Case was escalated. Field created for the YODA Program</description>
    <label>Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need Assistance</fullName>
            </value>
            <value>
                <fullName>Need Product Expertise</fullName>
            </value>
            <value>
                <fullName>Need Process Expertise</fullName>
            </value>
            <value>
                <fullName>Special Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>