force-app/main/default/objects/Case/fields/Expected_Resolve_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resolve_Date__c</fullName>
    <label>Expected Resolve Date</label>
    <type>Date</type>
</CustomField>