force-app/main/default/objects/Case/fields/Feature_Request__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature Request</label>
    <type>Checkbox</type>
</CustomField>