force-app/main/default/objects/Case/fields/Integration_ServAir_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_ServAir_Id__c</fullName>
    <externalId>true</externalId>
    <label>ServAir Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>