force-app/main/default/objects/Case/fields/Opt_IN__c.field-meta.xml
<CustomField>
    <fullName>Opt_IN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt IN</label>
    <type>Checkbox</type>
</CustomField>