force-app/main/default/objects/Case/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>