force-app/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>Product.Category__r.Name</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>