force-app/main/default/objects/Case/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>This field is used to store the progress details of case.</description>
    <label>Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>