force-app/main/default/objects/Case/fields/Re_open_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_open_Reason__c</fullName>
    <label>Re-open Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>