force-app/main/default/objects/Case/fields/Re_Opened__c.field-meta.xml
<CustomField>
    <fullName>Re_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Opened</label>
    <type>Checkbox</type>
</CustomField>