force-app/main/default/objects/Case/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <description>Case Link to be used in Lightning Email Template.</description>
    <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Id</formula>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>