force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Created for YODA Project. Shows Case Owner Region</description>
    <formula>TEXT(Owner:User.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>