force-app/main/default/objects/Case/fields/Resolved_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Status_Notes__c</fullName>
    <label>Resolved Status Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>