force-app/main/default/objects/Case/fields/ServAir_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ServAir_Created_Date__c</fullName>
    <label>ServAir Created Date</label>
    <type>DateTime</type>
</CustomField>