force-app/main/default/objects/Case/fields/ServAir_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>ServAir_Incident_Number__c</fullName>
    <label>ServAir Incident Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>