force-app/main/default/objects/Case/fields/Service_you_require__c.field-meta.xml
<CustomField>
    <fullName>Service_you_require__c</fullName>
    <description>This filed is used to store Service you require from Service request page</description>
    <label>Service you require</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Schedule Maintenance</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>On-call Support</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Calibration</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Repair</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Training</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>System Upgrade</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Security</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Diagnosis</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Modification</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>Other Chargeable</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>Proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>