force-app/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>