force-app/main/default/objects/Case/fields/URL_Source__c.field-meta.xml
<CustomField>
    <fullName>URL_Source__c</fullName>
    <label>URL Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>