force-app/main/default/objects/Case/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <formula>$User.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Country</label>
    <type>Text</type>
</CustomField>