force-app/main/default/objects/Case/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty</label>
    <type>Checkbox</type>
</CustomField>