force-app/main/default/objects/Case/fields/Web_Category_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Web_Category_of_Interest__c</fullName>
    <description>Category of Interest options on web forms. Using a global picklist</description>
    <label>Web Category of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category_of_Interest</valueSetName>
    </valueSet>
</CustomField>