force-app/main/default/objects/Case/fields/Web_Country__c.field-meta.xml
<CustomField>
    <fullName>Web_Country__c</fullName>
    <label>Web Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>