force-app/main/default/objects/Case/fields/Web_Country_tobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Web_Country_tobedeleted__c</fullName>
    <description>Country options on web forms. Using a global picklist</description>
    <label>Web Country tobedeleted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>