force-app/main/default/objects/Case/fields/Web_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Web_Product_of_Interest__c</fullName>
    <label>Web Product of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>