force-app/main/default/objects/Case/fields/Web_State__c.field-meta.xml
<CustomField>
    <fullName>Web_State__c</fullName>
    <description>States for United States and Canada options on web forms</description>
    <label>Web State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>