force-app/main/default/objects/Case/fields/X3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party</label>
    <type>Checkbox</type>
</CustomField>