force-app/main/default/objects/Case/recordTypes/General_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>General_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>This record type will handle the general inquiries</description>
    <label>General Inquiry</label>
</RecordType>