force-app/main/default/objects/Case/recordTypes/Sales_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Sales_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>This record type will handle the sales Inquiries</description>
    <label>Sales Inquiry</label>
</RecordType>