force-app/main/default/objects/Case/recordTypes/Sales_Request.recordType-meta.xml
<RecordType>
    <fullName>Sales_Request</fullName>
    <active>true</active>
    <businessProcess>YODA Default Support Process</businessProcess>
    <description>For sales requests, such as RFQ, demo, parts order, contract renewal etc.</description>
    <label>Sales Request</label>
</RecordType>