force-app/main/default/objects/Case/recordTypes/Service_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Service_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <description>This record type will handle the service Inquiry</description>
    <label>Service Inquiry</label>
</RecordType>