force-app/main/default/objects/Case/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <businessProcess>YODA Default Support Process</businessProcess>
    <description>For repairs, calibrations, returns, recalls/replacements, schedule maintenance, training, etc.</description>
    <label>Service Request</label>
</RecordType>