force-app/main/default/objects/Case/recordTypes/Technical_Support.recordType-meta.xml
<RecordType>
    <fullName>Technical_Support</fullName>
    <active>true</active>
    <businessProcess>YODA Default Support Process</businessProcess>
    <description>For malfunction, incident, installation, setup, application, site support, engineering inquiry, etc.</description>
    <label>Technical Support</label>
</RecordType>