force-app/main/default/objects/Case/validationRules/YODA_Case_Block_Revert_New.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Case_Block_Revert_New</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

  ISPICKVAL(Status, &quot;New&quot;), 
  NOT(ISPICKVAL(PRIORVALUE(Status), &quot;New&quot;)),

  NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c )


)</errorConditionFormula>
    <errorMessage>Case Status can&apos;t be reverted to New after it has been saved to other Statuses.</errorMessage>
</ValidationRule>