force-app/main/default/objects/Case/validationRules/YODA_Case_Locked_When_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Case_Locked_When_Cancelled</fullName>
    <active>true</active>
    <description>Once the Case status is set to Close-Canceled then only admin users (System Admin, YODA Admin) should be able to edit the case. All other users should not be able to edit the case.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Closed-Canceled&quot;),
  CONTAINS($Profile.Name , &quot;YODA&quot;),
  NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c )
)</errorConditionFormula>
    <errorMessage>This case is locked​</errorMessage>
</ValidationRule>