force-app/main/default/objects/Case/validationRules/YODA_Case_Locked_When_Merged.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Case_Locked_When_Merged</fullName>
    <active>true</active>
    <description>Once the Case status is set to Merged then only admin users (System Admin, YODA Admin) should be able to edit the case. All other users should not be able to edit the case.</description>
    <errorConditionFormula>AND(
IF(AND(ISCHANGED(Status),ISPICKVAL(Status, &quot;Merged&quot;),(PRIORVALUE (Status) &lt;&gt; &quot;Merged&quot;)),FALSE, (ISPICKVAL(Status, &quot;Merged&quot;))),
CONTAINS($Profile.Name , &quot;YODA&quot;),
NOT($Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
    <errorMessage>This case is locked​</errorMessage>
</ValidationRule>