force-app/main/default/objects/Case/validationRules/YODA_Case_Owner_Change_Match_BU.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Case_Owner_Change_Match_BU</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT( $User.Business_Unit__c )&lt;&gt; TEXT(Owner:User.Business_Unit__c),
IsClosed=false,
ISCHANGED( OwnerId ),
OR(
RecordType.DeveloperName =&apos;General_Inquiry&apos;,
RecordType.DeveloperName =&apos;Sales_Request&apos;,
RecordType.DeveloperName =&apos;Service_Request&apos;,
RecordType.DeveloperName =&apos;Technical_Support&apos;
),
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c)
)</errorConditionFormula>
    <errorMessage>Case Owner can only be changed by User with same Business Unit.</errorMessage>
</ValidationRule>