force-app/main/default/objects/Case/validationRules/YODA_Close_Case_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Close_Case_Needs_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Closed&quot;), ISBLANK(TEXT(  Close_Reason__c)),NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
    <errorDisplayField>Close_Reason__c</errorDisplayField>
    <errorMessage>Add a Close Reason to Close a Case</errorMessage>
</ValidationRule>