force-app/main/default/objects/Case/validationRules/YODA_Close_Case_Needs_Solution.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Close_Case_Needs_Solution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Closed&quot;), ISBLANK( Solution__c ),NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
    <errorDisplayField>Solution__c</errorDisplayField>
    <errorMessage>Add a Solution to Close a Resolved Case</errorMessage>
</ValidationRule>