force-app/main/default/objects/Case/validationRules/YODA_Contact_Required_for_Case_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Contact_Required_for_Case_Closure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Closed&quot;), ISBLANK( ContactId ),NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Add a Contact to Close a Case</errorMessage>
</ValidationRule>