force-app/main/default/objects/Case/validationRules/YODA_Escalated_Priority_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Escalated_Priority_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsEscalated ,  ISBLANK(TEXT(  Escalation_Reason__c )),ISBLANK(TEXT(   Priority  )),NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
    <errorMessage>Please select Escalation Reason and Priority</errorMessage>
</ValidationRule>