force-app/main/default/objects/Case/validationRules/YODA_Re_Open_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Re_Open_Needs_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( PRIORVALUE(Status) , &quot;Closed&quot;),ISCHANGED(Status), ISBLANK( Re_open_Reason__c),NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ))</errorConditionFormula>
    <errorDisplayField>Re_open_Reason__c</errorDisplayField>
    <errorMessage>Add a Re-open reason to re-open a Case</errorMessage>
</ValidationRule>