force-app/main/default/objects/Case/listViews/Japan_T_M_Case.listView-meta.xml
<ListView>
    <fullName>Japan_T_M_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Queue</filterScope>
    <label>Japan T&amp;M</label>
    <queue>Japan_T_M</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>