force-app/main/default/objects/Case/listViews/My_Teams_Open_Cases.listView-meta.xml
<ListView>
    <fullName>My_Teams_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Close case,Closed,Merged,Closed-Resolved,Closed-Canceled</value>
    </filters>
    <label>My Teams Open Cases</label>
</ListView>